--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "@types/p5": "^1.4.2",
     "p5": "^1.4.1",
-    "utils": "^0.3.1"
+    "utils": "^0.3.1",
+    "parcel-plugin-static-files-copy": "^2.6.0"
   },
   "scripts": {
     "start": "parcel index.html",
