--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "dependencies": {
     "@types/p5": "^1.4.2",
     "p5": "^1.4.1",
-    "utils": "^0.3.1",
-    "parcel-plugin-static-files-copy": "^2.6.0"
+    "utils": "^0.3.1"
   },
   "scripts": {
     "start": "parcel index.html",
@@ -16,6 +15,7 @@
   },
   "devDependencies": {
     "parcel-bundler": "^1.6.1",
+    "parcel-plugin-static-files-copy": "^2.6.0",
     "typescript": "^4.7.4"
   },
   "keywords": [],
