--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "private": false,
   "dependencies": {
     "@types/p5": "^1.4.2",
+    "classes": "^0.3.0",
     "p5": "^1.4.1",
+    "raf": "^3.4.1",
+    "sketch": "^0.2.0",
     "utils": "^0.3.1"
   },
   "scripts": {
